<resources>
    <plurals name="years">
        <item quantity="zero" />
        <item quantity="one">%1$d год</item>
        <item quantity="few">%1$d года</item>
        <item quantity="other">%1$d лет</item>
    </plurals>

    <plurals name="months">
        <item quantity="zero" />
        <item quantity="one">%1$d месяц</item>
        <item quantity="few">%1$d месяца</item>
        <item quantity="other">%1$d месяцев</item>
    </plurals>

    <string name="app_name">Trade App</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="field_required">Необходимо заполнить это поле</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="lastName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="employees">Сотрудники</string>
    <string name="clients">Клиенты</string>
    <string name="deals">Сделки</string>
    <string name="login_and_password_not_match">Логин и пароль не сопадают</string>
    <string name="admin">Администратор</string>
    <string name="dispatcher">Диспетчер</string>
    <string name="worker">Работник</string>
    <string name="logout">Выйти</string>
    <string name="shortened_name_pattern">%1$s %2$s. %3$s.</string>
    <string name="shortened_name_pattern_no_patronymic">%1$s %2$s.</string>
    <string name="personal_number_pattern">Личный номер: %d</string>
    <string name="personal_number">Личный номер</string>
    <string name="deal_number_pattern">Сделка №%d</string>
    <string name="bought_pattern">Куплено: %1$s, %2$d %3$s</string>
    <string name="sold_pattern">Продано: %1$s, %2$d %3$s</string>
    <string name="employee_not_found">Не удалось найти данного сотрудника</string>
    <string name="ok">Ок</string>
    <string name="about_employee">О сотруднике</string>
    <string name="about_deal">О сделке</string>
    <string name="about_client">О клиенте</string>
    <string name="about_product">О товаре</string>
    <string name="position">Должность</string>
    <string name="experience">Стаж</string>
    <string name="status">Статус</string>
    <string name="status_active">Активен</string>
    <string name="status_fired">Уволен</string>
    <string name="space_separated_pattern">%1$s %2$s</string>
    <string name="less_than_month">Меньше месяца</string>
    <string name="income_pattern">Общая прибыль: %d руб.</string>
    <string name="costs_pattern">Общие расходы: %d руб.</string>
    <string name="save">Сохранить</string>
    <string name="deal_number">Номер сделки</string>
    <string name="deal_type">Тип сделки</string>
    <string name="deal_type_purchase">Покупка</string>
    <string name="deal_type_sale">Продажа</string>
    <string name="seller">Продавец</string>
    <string name="buyer">Покупатель</string>
    <string name="deal_sum">Сумма сделки</string>
    <string name="product">Товар</string>
    <string name="products">Товары</string>
    <string name="amount">Количество</string>
    <string name="ruble_pattern">%d руб.</string>
    <string name="client_number">Номер клиента</string>
    <string name="client_name">Название организации</string>
    <string name="legal_address">Юридический адрес</string>
    <string name="product_number">Номер товара</string>
    <string name="product_name">Наименование товара</string>
    <string name="unit">Единица измерений</string>
    <string name="price_per_one">Цена за единицу</string>
    <string name="fire_employee">Уволить</string>
    <string name="return_employee">Восстановить</string>
    <string name="fire_employee_message">Вы уверены, что хотите уволить этого сотрудника?</string>
    <string name="return_employee_message">Вы уверены, что хотите восстановить этого сотрудника?</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="add_employee">Добавить сотрудника</string>
    <string name="add_deal">Добавить сделку</string>
    <string name="fired">Уволен</string>
    <string name="sell">Продать</string>
    <string name="sale">Продажа</string>
    <string name="buy">Купить</string>
    <string name="purchase">Покупка</string>
    <string name="not_chosen">Не выбрано</string>
    <string name="unit_single">ед.</string>
    <string name="need_to_choose_client">Клиент не выбран</string>
    <string name="need_to_choose_product">Товар не выбран</string>
    <string name="need_to_choose_amount">Некорректное количество</string>
    <string name="sum_pattern">Сумма сделки: %d руб.</string>
    <string name="select_client">Выберите клиента</string>
    <string name="select_product">Выберите товар</string>
    <string name="invalid_amount">Введите корректное количество</string>
    <string name="add_client">Добавить клиента</string>
    <string name="add_product">Добавить товар</string>
</resources>