<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/about_deal" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:overScrollMode="never">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <sibfu.tradeapp.view.TwoLinesItemView
                android:id="@+id/numberView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/deal_number" />

            <sibfu.tradeapp.view.TwoLinesItemView
                android:id="@+id/dealTypeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/deal_type" />

            <sibfu.tradeapp.view.TwoLinesItemView
                android:id="@+id/sumView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/deal_sum" />

            <sibfu.tradeapp.view.TwoLinesItemView
                android:id="@+id/sellerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:title="@string/seller" />

            <sibfu.tradeapp.view.TwoLinesItemView
                android:id="@+id/buyerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:title="@string/buyer" />

            <sibfu.tradeapp.view.TwoLinesItemView
                android:id="@+id/productView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:title="@string/product" />

            <sibfu.tradeapp.view.TwoLinesItemView
                android:id="@+id/amountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/amount" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_outline_add_24" />

</androidx.appcompat.widget.LinearLayoutCompat>